--- a/voiplib/build.gradle
+++ b/voiplib/build.gradle
@@ -32,39 +32,10 @@ android {
 
 publishing {
     publications {
-        maven(MavenPublication) {
-            groupId "io.build"
+        release(MavenPublication) {
+            groupId "com.github.RD-MT"
             artifactId "voip-lib"
-            version "1.0.1"
-            artifact "$buildDir/outputs/aar/voiplib-release.aar"
-
-            pom {
-                withXml {
-                    def dependenciesNode = asNode().appendNode('dependencies')
-
-                    project.configurations.implementation.allDependencies.each {
-                        if (it.group != null || it.name != null || it.version != null || it.name == "unspecified") return
-
-                        def dependencyNode = dependenciesNode.appendNode('dependency')
-                        dependencyNode.appendNode('groupId', it.group)
-                        dependencyNode.appendNode('artifactId', it.name)
-                        dependencyNode.appendNode('version', it.version)
-                    }
-                }
-            }
-        }
-    }
-    repositories {
-        maven {
-            /*def propsFile = rootProject.file('github.properties')
-            def props = new Properties()
-            props.load(new FileInputStream(propsFile))*/
-            name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/RD-MT/voip-lib")
-            credentials {
-                username = "RD-MT"
-                password = "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"
-            }
+            version "1.0.0"
         }
     }
 }
