--- a/voiplib/build.gradle
+++ b/voiplib/build.gradle
@@ -30,12 +30,19 @@ android {
     }
 }
 
+task sourceJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    archiveClassifier.set("sources")
+}
+
 publishing {
     publications {
         release(MavenPublication) {
             groupId "com.github.RD-MT"
             artifactId "voip-lib"
-            version "1.0.0"
+            version "1.0.1"
+
+            artifact sourceJar
         }
     }
 }
