--- a/voiplib/build.gradle
+++ b/voiplib/build.gradle
@@ -40,8 +40,8 @@ publishing {
         release(MavenPublication) {
             groupId "com.github.RD-MT"
             artifactId "voip-lib"
-            version "1.0.1"
-
+            version "1.0.2"
+            artifact "$buildDir/voiplib/outputs/aar/voiplib-release.aar"
             artifact sourceJar
         }
     }
