--- a/voiplib/build.gradle
+++ b/voiplib/build.gradle
@@ -35,17 +35,15 @@ task sourceJar(type: Jar) {
     archiveClassifier.set("sources")
 }
 
-publishing {
-    publications {
-        release(MavenPublication) {
-            afterEvaluate {
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
                 from components.release
+                groupId = 'com.github.RD-MT'
+                artifactId = 'voip-lib'
+                version = '1.0.5'
             }
-            /*groupId "com.github.RD-MT"
-            artifactId "voip-lib"
-            version "1.0.3"*/
-
-            /*artifact sourceJar*/
         }
     }
 }
